# ai4wc

./: README.md  pyproject.toml
ai4wc/data_processing/: __init__.py  dataloader.py  preprocess.py
ai4wc/models/: nuViT.py
ai4wc/train/: train.py
ai4wc/utils/: utils.py
notebooks/: test_nuViT.ipynb  test_preprocessing.ipynb
tests/utils/: test_utils.py  tgz2numpy.py
