[build-system]
requires = [
    "setuptools >= 65",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ai4wc"
version = "0.0.1"
description = "Deep learning algo/models for LArTPC event reconstruction"
readme = "README.md"
requires-python = ">=3.9"
authors = []
dependencies = [
    "numpy >= 1.20",
    "matplotlib",
    "torch",
    "torchvision"
]

[tool.setuptools.packages.find]
where = ["ai4wc"]
